Update build.sbt to use JAVA17 and scala 3.2.2